# vega-market-sim

./: .dockerignore  .env  .gitignore  CODEOWNERS  Dockerfile  Jenkinsfile  LICENSE  Makefile  Pipfile  README.md  RLSimulation.ipynb  buf.gen.yaml  conftest.py  generate_vega_init.py  pyproject.toml  pytest.ini  reqs.txt  requirements-dev.txt  requirements-learning.txt  requirements.txt  run.py  setup.py  test.py
.github/: pull_request_template.md
.github/workflows/: dependencies.yml  python.yml  release.yml  release_test.yml
devops/: README.md  classes.py  example_tokens.json  registry.py  run.py  run_agent.py  run_scenario.py  scenario.py  wallet.py
examples/: datanode_killer.py  nullchain.py
examples/agent_market/: MomentumAgent.py  agent_market.py  agents.py
examples/notebooks/: 0002-STTL-008.ipynb  0004-AMND-021.ipynb  0004-AMND-022.ipynb  0004-AMND-023.ipynb  0004-AMND-024.ipynb  Agents.ipynb  Data download.ipynb  InvestigatePriceMove.ipynb  LiquidityFeesCheck.ipynb  MM_Volume_Margin_Bond.ipynb  MarketDataHistory.ipynb  MomentumAgentPerformance.ipynb  Performance.ipynb  SelfTradeDuringAuctionUncross.ipynb  Settlement.ipynb  SetupTradeSettle.ipynb  Signing.ipynb  SigningPerformance.ipynb  Simulation.ipynb  StakeToCcy.ipynb  Test_Closeout.ipynb
examples/visualisations/: README.md  auction_exit.py  basic_open_market.py  closed_out.py  gtt_liquidation.py  loss_socialisation.py  margins.py  multiple_lps.py  slippage.py  utils.py
notebooks/: vAMM.ipynb
parameter_results/: DemoNotebook.ipynb  TauScaling_NoFee.ipynb  toolkit.py
parameter_results/MIN_LP_STAKE_QUANTUM_DEMO/: DemoNotebook.ipynb
parameter_results/MarginScalingFactors/: MarginScalingFactors.ipynb
parameter_results/MarkPriceUpdateFrequency/: MarkPriceUpdateFrequency.ipynb
parameter_results/MarketParameterDemo/: MarketParameterDemo.ipynb
parameter_results/Siska_Curve/: StakeToCcySiskas_Demo.ipynb
parameter_results/StakeTargetScaling/: NetworkParameter_NBC_StakeTargetScaling.ipynb
parameter_results/StakeTargetScaling_v2/: NetworkParameter_NBC_StakeTargetScaling.ipynb
parameter_results/TargetStakeScalingFactor/: TargetStakeScalingFactor.ipynb
parameter_results/TauScaling/: NetworkParameter_NBC_TauScaling.ipynb
parameter_results/TauScalingFactor/: TauScalingFactor.ipynb
parameter_results/TauScaling_Curve/: NetworkParameter_NBC_TauScaling_Curve.ipynb  TauScaling_Demo.ipynb
parameter_results/TauScaling_v2/: NetworkParameter_NBC_TauScaling.ipynb
ppo_tensorboard/PPO_1/: events.out.tfevents.1690826230.RYs-MacBook-Pro-5.local.43049.0
ppo_tensorboard/PPO_2/: events.out.tfevents.1690829458.RYs-MacBook-Pro-5.local.45304.0
reinforcement/: distributions.py  helpers.py  learning_agent.py  market_sim.py  networks.py  plot.py
reinforcement/full_market_sim/: agents.py  environments.py
reinforcement/slides/: Bibliography.bib  RL.tex
scripts/: build-docker-learning.sh  build-docker-test.sh  build-docker.sh  check_tagged_versions.py  generate_snapshot_jsons.sh  post-generate.sh  run-capsule-test.sh  run-docker-capsule-test.sh  run-docker-example-notebook-test.sh  run-docker-fuzz-test.sh  run-docker-integration-test.sh  run-docker-learning.sh  run-docker-plot-gen.sh  run-example-notebook-test.sh  run-fuzz-test.sh  run-integration-test.sh  run-learning-test.sh  run-plot-gen.sh  update_vega_version.sh
tests/integration/: test_amms.py  test_capsule.py  test_crash.py  test_devops.py  test_fuzz.py  test_governance.py  test_liquidation.py  test_multiple_instantiation.py  test_openoracle_settlement.py  test_pap.py  test_parameter_runner.py  test_plot_gen.py  test_port_config.py  test_reinforcement.py  test_sets.py  test_settlement.py  test_spam.py  test_trading.py  test_transaction_store.py  test_update_market.py  test_visualisations.py  testing_utils.py
tests/vega_protos/: test_protos.py
tests/vega_query/: __init__.py  fixtures.py
tests/vega_sim/: test_local_data_cache.py  test_service.py
vega_protos/: __init__.py  buf.gen.yaml  generate.py  post-generate.sh
vega_protos/protos/: __init__.py
vega_query/: __init__.py  logging.yaml  utils.py
vega_query/checks/: fees.py
vega_query/scripts/: parser.py  plots.py
vega_query/service/: service.py  service_core.py  service_trading_data.py
vega_query/visualisations/: __init__.py  overlay.py  plot.py
vega_sim/: __init__.py  constants.py  fairground_service.py  local_data_cache.py  network_service.py  null_service.py  null_service_pool.py  service.py
vega_sim/api/: data.py  data_raw.py  faucet.py  governance.py  helpers.py  market.py  test_fns.py  trading.py  wallet.py
vega_sim/builders/: __init__.py  data_source.py  exceptions.py  governance.py  markets.py  vega.py
vega_sim/configs/: __init__.py  agents.py
vega_sim/devops/: README.md  classes.py  instructions.md  registry.py  run_agent.py  run_infra_scenario.py  run_infra_scenario2.py  run_scenario.py  scenario.py  wallet.py
vega_sim/environment/: __init__.py  agent.py  environment.py
vega_sim/grpc/: client.py
vega_sim/parameter_test/: run.py
vega_sim/parameter_tests/: main.py
vega_sim/quant/: quant.py
vega_sim/reinforcement/: .gitignore  distributions.py  environments.py  helpers.py  la_market_state.py  learning_agent.py  learning_agent_MO.py  learning_agent_MO_with_vol.py  learning_agent_heuristic.py  market_sim.py  networks.py  plot.py  replay_saved.py  run_rl_agent.py  (+2 more)
writeup/: MyThesis.tex  literature.bib
(+387 files in other folders)
