[tool.poetry]
name = "vega_sim"
description = "Simulator for running self-contained Vega chain on local PC"
authors = ["Tom McLean <tom@vegaprotocol.io>"]
license = "MIT"
version = "1.1.1"

[tool.setuptools]
zip-safe = false

[tool.poetry.dependencies]
python = "^3.9,<3.11"
requests = "^2.28.0"
toml = "^0.10.2"
grpcio-tools = "1.48.1"
PyNaCl = "^1.5.0"
inflection = "^0.5.1"
scipy = "^1.8.1"
pandas = "^1.4.2"
numpy = "^1.22.4"
torch = {version = "^1.12.1", optional = true}
jupyterlab = {version = "^3.4.3", optional = true}
jupyter = {version = "^1.0.0", optional = true}
tqdm = {version = "^4.64.0", optional = true}
matplotlib = {version = "^3.5.2", optional = true}
snakeviz = {version = "^2.1.1", optional = true}
pytest-profiling = {version = "^1.7.0", optional = true}
ipywidgets = {version = "^7.7.1", optional = true}
grpc-gateway-protoc-gen-openapiv2 = "^0.1.0"
plotly = "^5.10.0"
TA-Lib = {version = "^0.4.25", optional = true}
python-dotenv = "^0.21.0"
deprecated = "^1.2.13"
psutil = "^5.9.4"
gymnasium = {version = "^0.28.1", optional = true}
sb3-contrib = {version = "^2.0.0a1", optional = true}
stable-baselines3 = {version = "^2.0.0a1", optional = true }
tensorboard = {version = "^2.12.2", optional = true}

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.1.2"
requests-mock = "^1.9.3"
flake8 = "^4.0.1"
Jinja2 = "^3.1.2"
nbmake = "^1.3.2"
matplotlib = "^3.5.2"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.extras]
learning = ["matplotlib", "tqdm", "torch", "gymnasium", "stable-baselines3", "tensorboard"]
jupyter = ["jupyterlab", "jupyter", "matplotlib", "ipywidgets"]
profile = ["snakeviz", "pytest-profiling"]
agents = ["TA-Lib"]
